--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1242,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4    bangalore         \\n\\n      30 bhp  197500  "
       ]
      },
-     "execution_count": 1242,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1243,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>mileage</th>\n",
+       "      <th>kms_driven</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bajaj Avenger Cruise 220 2017</td>\n",
+       "      <td>\\n\\n 35 kmpl</td>\n",
+       "      <td>17000 Km</td>\n",
+       "      <td>19 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Royal Enfield Classic 350cc 2016</td>\n",
+       "      <td>\\n\\n 35 kmpl</td>\n",
+       "      <td>50000 Km</td>\n",
+       "      <td>19.80 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hyosung GT250R 2012</td>\n",
+       "      <td>\\n\\n 30 kmpl</td>\n",
+       "      <td>14795 Km</td>\n",
+       "      <td>28 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bajaj Dominar 400 ABS 2017</td>\n",
+       "      <td>\\n\\n 28 Kms</td>\n",
+       "      <td>Mileage 28 Kms</td>\n",
+       "      <td>34.50 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jawa Perak 330cc 2020</td>\n",
+       "      <td>\\n\\n</td>\n",
+       "      <td>2000 Km</td>\n",
+       "      <td>30 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7852</th>\n",
+       "      <td>Yamaha YZF-R15 150cc 2011</td>\n",
+       "      <td>\\n\\n 42 kmpl</td>\n",
+       "      <td>7000 Km</td>\n",
+       "      <td>16 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7853</th>\n",
+       "      <td>Bajaj Discover 100cc 2015</td>\n",
+       "      <td>\\n\\n 80 Kmpl</td>\n",
+       "      <td>Mileage 80 Kmpl</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7854</th>\n",
+       "      <td>Bajaj Pulsar 180cc 2016</td>\n",
+       "      <td>\\n\\n 65 kmpl</td>\n",
+       "      <td>6407 Km</td>\n",
+       "      <td>17 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7855</th>\n",
+       "      <td>Bajaj V15 150cc 2016</td>\n",
+       "      <td>\\n\\n 57 kmpl</td>\n",
+       "      <td>7524 Km</td>\n",
+       "      <td>11.80 bhp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7856</th>\n",
+       "      <td>Bajaj Pulsar 220cc 2016</td>\n",
+       "      <td>\\n\\n 38 kmpl</td>\n",
+       "      <td>15000 Km</td>\n",
+       "      <td>21 bhp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7857 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            model_name       mileage       kms_driven  \\\n",
+       "0        Bajaj Avenger Cruise 220 2017  \\n\\n 35 kmpl         17000 Km   \n",
+       "1     Royal Enfield Classic 350cc 2016  \\n\\n 35 kmpl         50000 Km   \n",
+       "2                  Hyosung GT250R 2012  \\n\\n 30 kmpl         14795 Km   \n",
+       "3           Bajaj Dominar 400 ABS 2017   \\n\\n 28 Kms   Mileage 28 Kms   \n",
+       "4                Jawa Perak 330cc 2020         \\n\\n           2000 Km   \n",
+       "...                                ...           ...              ...   \n",
+       "7852         Yamaha YZF-R15 150cc 2011  \\n\\n 42 kmpl          7000 Km   \n",
+       "7853         Bajaj Discover 100cc 2015  \\n\\n 80 Kmpl  Mileage 80 Kmpl   \n",
+       "7854           Bajaj Pulsar 180cc 2016  \\n\\n 65 kmpl          6407 Km   \n",
+       "7855              Bajaj V15 150cc 2016  \\n\\n 57 kmpl          7524 Km   \n",
+       "7856           Bajaj Pulsar 220cc 2016  \\n\\n 38 kmpl         15000 Km   \n",
+       "\n",
+       "          power  \n",
+       "0        19 bhp  \n",
+       "1     19.80 bhp  \n",
+       "2        28 bhp  \n",
+       "3     34.50 bhp  \n",
+       "4        30 bhp  \n",
+       "...         ...  \n",
+       "7852     16 bhp  \n",
+       "7853        7.7  \n",
+       "7854     17 bhp  \n",
+       "7855  11.80 bhp  \n",
+       "7856     21 bhp  \n",
+       "\n",
+       "[7857 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['model_name','mileage','kms_driven','power']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +335,7 @@
        "(7857, 8)"
       ]
      },
-     "execution_count": 1243,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1244,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +363,7 @@
        "0"
       ]
      },
-     "execution_count": 1244,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1245,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1246,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +492,7 @@
        "price       125000.0  3000000.0  "
       ]
      },
-     "execution_count": 1246,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1247,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1248,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +557,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1248,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1249,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -442,8 +596,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking the distribution of Price"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1250,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1251,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +673,7 @@
        "Name: model_name, Length: 7765, dtype: object"
       ]
      },
-     "execution_count": 1251,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1252,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -561,44 +723,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Bajaj Avenger</td>\n",
+       "      <td>Bajaj Avenger Cruise</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Royal Enfield</td>\n",
+       "      <td>Royal Enfield Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Hyosung GT250R</td>\n",
+       "      <td>Hyosung GT250R 2012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Bajaj Dominar</td>\n",
+       "      <td>Bajaj Dominar 400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Jawa Perak</td>\n",
+       "      <td>Jawa Perak 330cc</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       model_name\n",
-       "0   Bajaj Avenger\n",
-       "1   Royal Enfield\n",
-       "2  Hyosung GT250R\n",
-       "3   Bajaj Dominar\n",
-       "4      Jawa Perak"
+       "              model_name\n",
+       "0   Bajaj Avenger Cruise\n",
+       "1  Royal Enfield Classic\n",
+       "2    Hyosung GT250R 2012\n",
+       "3      Bajaj Dominar 400\n",
+       "4       Jawa Perak 330cc"
       ]
      },
-     "execution_count": 1252,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['model_name']=df['model_name'].apply(lambda x:' '.join(x.split()[:2]))\n",
+    "df['model_name']=df['model_name'].apply(lambda x:' '.join(x.split()[:3]))\n",
     "df[['model_name']].head(5)"
    ]
   },
@@ -612,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1253,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +830,7 @@
        "3  Mileage 28 Kms"
       ]
      },
-     "execution_count": 1253,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1254,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1255,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +931,7 @@
        "4        2000"
       ]
      },
-     "execution_count": 1255,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1256,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +961,7 @@
        "       'fourth owner or more'], dtype=object)"
       ]
      },
-     "execution_count": 1256,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1257,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +1082,7 @@
        "[7765 rows x 1 columns]"
       ]
      },
-     "execution_count": 1257,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1258,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1259,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1176,7 @@
        "3       28"
       ]
      },
-     "execution_count": 1259,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1260,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1221,7 @@
        "Name: power, dtype: object"
       ]
      },
-     "execution_count": 1260,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1261,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1262,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1296,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Bajaj Avenger</td>\n",
+       "      <td>Bajaj Avenger Cruise</td>\n",
        "      <td>2017</td>\n",
        "      <td>17000</td>\n",
        "      <td>first owner</td>\n",
@@ -1145,7 +1307,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Royal Enfield</td>\n",
+       "      <td>Royal Enfield Classic</td>\n",
        "      <td>2016</td>\n",
        "      <td>50000</td>\n",
        "      <td>first owner</td>\n",
@@ -1156,7 +1318,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Hyosung GT250R</td>\n",
+       "      <td>Hyosung GT250R 2012</td>\n",
        "      <td>2012</td>\n",
        "      <td>14795</td>\n",
        "      <td>first owner</td>\n",
@@ -1167,7 +1329,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Bajaj Dominar</td>\n",
+       "      <td>Bajaj Dominar 400</td>\n",
        "      <td>2017</td>\n",
        "      <td>17159</td>\n",
        "      <td>first owner</td>\n",
@@ -1178,7 +1340,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Jawa Perak</td>\n",
+       "      <td>Jawa Perak 330cc</td>\n",
        "      <td>2020</td>\n",
        "      <td>2000</td>\n",
        "      <td>first owner</td>\n",
@@ -1192,22 +1354,22 @@
        "</div>"
       ],
       "text/plain": [
-       "       model_name  model_year  kms_driven        owner     location  mileage  \\\n",
-       "0   Bajaj Avenger        2017       17000  first owner    hyderabad       35   \n",
-       "1   Royal Enfield        2016       50000  first owner    hyderabad       35   \n",
-       "2  Hyosung GT250R        2012       14795  first owner    hyderabad       30   \n",
-       "3   Bajaj Dominar        2017       17159  first owner  pondicherry       28   \n",
-       "4      Jawa Perak        2020        2000  first owner    bangalore       40   \n",
+       "              model_name  model_year  kms_driven        owner     location  \\\n",
+       "0   Bajaj Avenger Cruise        2017       17000  first owner    hyderabad   \n",
+       "1  Royal Enfield Classic        2016       50000  first owner    hyderabad   \n",
+       "2    Hyosung GT250R 2012        2012       14795  first owner    hyderabad   \n",
+       "3      Bajaj Dominar 400        2017       17159  first owner  pondicherry   \n",
+       "4       Jawa Perak 330cc        2020        2000  first owner    bangalore   \n",
        "\n",
-       "   power   price  \n",
-       "0   19.0   63500  \n",
-       "1   19.8  115000  \n",
-       "2   28.0  300000  \n",
-       "3   34.5  100000  \n",
-       "4   30.0  197500  "
+       "   mileage  power   price  \n",
+       "0       35   19.0   63500  \n",
+       "1       35   19.8  115000  \n",
+       "2       30   28.0  300000  \n",
+       "3       28   34.5  100000  \n",
+       "4       40   30.0  197500  "
       ]
      },
-     "execution_count": 1262,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,14 +1396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1263,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model_name has 150 unique values\n",
+      "model_name has 324 unique values\n",
       "owner has 4 unique values\n",
       "location has 558 unique values\n"
      ]
