--- a/main.ipynb
+++ b/main.ipynb
@@ -2768,7 +2768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_lr=Pipeline([('col_tnf',encoder_transformer),\n",
+    "pipeline_lr=Pipeline([('encoder_transfomer',encoder_transformer),\n",
     "                        ('scaler_transformer',scaler_transformer),\n",
     "                      ('linear',LinearRegression())\n",
     "                      ])\n",
